# poker_mc_sims

./: Dockerfile  LICENSE  README.md  classes.py  eval_funcs.py  pyproject.toml  simulator.py
.github/workflows/: ci.yml
src/: classes.py  eval_funcs.py  simulator.py
tests/: test_game.py  test_omaha.py  test_texas.py
