[project]
name = "poker-mc-sims"
version = "0.1.0"
description = "Poker Monte Carlo Simulations"
authors = [
    {name = "Samyukt Sriram", email = "sriramsamyukt@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "poker-mc-sims"
version = "0.1.0"
description = "Poker Monte Carlo Simulations"
authors = ["Samyukt Sriram <sriramsamyukt@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "1.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
